# zap

./: .gitignore  Cargo.toml  README.md  wrangler.jsonc
.github/workflows/: release.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zap/transfer/: MainActivity.kt  NativeBridge.kt  ZapService.kt
android/app/src/main/res/layout/: activity_main.xml  transfer_row.xml
crates/zap-android/: Cargo.toml
crates/zap-android/src/: lib.rs
crates/zap-cli/: Cargo.toml
crates/zap-cli/src/: main.rs
crates/zap-core/: Cargo.toml
crates/zap-core/src/: lib.rs
crates/zap-core/src/web/: index.html  login.html  mod.rs
crates/zap-desktop/: Cargo.toml
crates/zap-desktop/src/: main.rs
docs/: backlog.md  custom-transport-brief.md  fast-lane-protocol.md  restructure-handoff.md  roadmap.md
docs/apps/: README.md  START-HERE.md  zap.md  zeus.md  zod.md  zulu-brief.md  zulu-handoff.md  zulu.md
networking/: Cargo.toml
networking/android/zulu/: settings.gradle.kts
networking/android/zulu/app/: build.gradle.kts
networking/android/zulu/app/src/main/: AndroidManifest.xml
networking/crates/zap-android/src/: lib.rs
networking/crates/zap-cli/src/: cli.rs  main.rs
networking/crates/zap-desktop/src/: main.rs
networking/crates/znet-core/src/web/: clips.rs  events.rs  fast.rs  fast_client.rs  index.html  mod.rs
networking/crates/zulu-desktop/: Cargo.toml
networking/crates/zulu-desktop/src/: main.rs  sync.rs
scripts/: build-dist.sh
site/: index.html  privacy.html
site/zap/: index.html
site/zap/download/: README.md
(+15 files in other folders)
